test/files/neg/implicit-ambiguous-val.check
implicit-ambiguous-val.scala:16: error: unexpected string
  meh("")
     ^
1 error
